Instead of using github.less compile and use github.css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="libraries/bootstrap/less/bootstrap.css" rel="stylesheet" />
-    <link href="libraries/less/github.less" rel="stylesheet/less" />
+    <link href="libraries/less/github.css" rel="stylesheet" />
     
     <!-- Icons -->
     <link rel="shortcut icon"                                href="/images/icons/favicon.ico">
