Do not use smart link trick on links with rel attribute

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	      <h2><span id="time-now">Documentation</span></h2>
 	
 		    <p class="split text-center">
-		      <a href="/SARAH-Documentation/" class="btn btn-lg btn-danger">Home</a>
+		      <a href="/SARAH-Documentation/" class="btn btn-lg btn-danger" rel="home">Home</a>
 		    </p>
 	      
 	      <div class="doc-sidebar" data-page="sidebar1"></div>
@@ -41,8 +41,8 @@
 	      <div class="wrapper">
 	      <div style="position:relative; left: -20px; top: 5px;" class="pull-left hidden-lg hidden-md"></div>
 	        <div style="position:absolute; right: 20px; top: 5px;">
-	          <a href="?lang=fr"><img src="images/famfamfam/flags/fr.png" alt="fr"/></a>&nbsp;
-	          <a href="?lang=en"><img src="images/famfamfam/flags/us.png" alt="en"/></a>
+	          <a href="?lang=fr" rel="language"><img src="images/famfamfam/flags/fr.png" alt="fr"/></a>&nbsp;
+	          <a href="?lang=en" rel="language"><img src="images/famfamfam/flags/us.png" alt="en"/></a>
 	        </div>
 	        
 	        <div id="content">
