--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     <script src="libraries/bootstrap/js/tab.js"></script> 
     <script src="libraries/bootstrap/js/transition.js"></script> 
     
-    <script src="libraries/markdown/markdown.js"></script>
-    <script src="libraries/less.min.js"></script>
+    <!--script src="libraries/markdown/markdown.js"></script>
+    <script src="libraries/less.min.js"></script-->
     
     <script src="libraries/js/github.js"></script>
   </body>
