--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <script src="libraries/less.min.js"></script-->
     
     <script src="libraries/highlight/highlight.pack.js"></script> 
-    
+    <script src="libraries/js/marked.js"></script>
     <script src="libraries/js/github.js"></script>
   </body>
 </html>
